kubernetes/apps/ai/mlx/app/audio.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: mlx-audio
spec:
    ports:
        - name: http
          port: 8001
          targetPort: 8001
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
    name: mlx-audio-1
    labels:
        kubernetes.io/service-name: mlx-audio
addressType: IPv4
ports:
    - name: http
      port: 8001
      protocol: TCP
endpoints:
    - addresses:
          - "192.168.10.30"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: llm-tts
spec:
    parentRefs:
        - name: envoy-internal
          namespace: network
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /v1/audio/speech
          backendRefs:
              - name: mlx-audio
                port: 8001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: llm-stt
spec:
    parentRefs:
        - name: envoy-internal
          namespace: network
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /v1/audio/transcriptions
          backendRefs:
              - name: mlx-audio
                port: 8001
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: llm-vad
spec:
    parentRefs:
        - name: envoy-internal
          namespace: network
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /v1/audio/vad
          backendRefs:
              - name: mlx-audio
                port: 8001
